<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#009688"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="#009688"
                android:fontFamily="@font/prompt_semibold"
                android:gravity="center"
                android:hint="@string/app_name"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />

            <ImageView
                android:id="@+id/history"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_marginStart="-60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                app:srcCompat="@drawable/img"
                app:tint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:hint="@string/weight"
            android:text="@string/weight"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/teal_700"
            tools:text="@string/weight" />

        <EditText
            android:id="@+id/kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/kg"
            android:inputType="none|number|numberDecimal"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/blue"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>

        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/height"
            android:text="@string/height"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/teal_700"
            tools:text="@string/height" />

        <EditText
            android:id="@+id/cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/cm"
            android:inputType="none|number|numberDecimal"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/blue"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:hint="@string/bmi"
            android:text="@string/bmi"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/teal_700"
            tools:text="@string/bmi" />

        <TextView
            android:id="@+id/bmi_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/bmi_result"
            android:inputType="none|number|numberDecimal"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:hint="@string/result"
            android:text="@string/result"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/teal_700"
            tools:text="@string/result" />

        <TextView
            android:id="@+id/resultOutput"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/resultOutput"
            android:inputType="none"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>

        <Button
            android:id="@+id/calculate"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="30dp"
            android:background="@color/teal_700"
            android:backgroundTint="#009688"
            android:hint="@string/calculate"
            android:text="@string/calculate"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:text="@string/calculate" />

    </LinearLayout>
</ScrollView>